<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="@string/key_general"
        app:title="@string/general">

        <Preference
            android:icon="@drawable/ic_person_24dp"
            app:key="@string/key_switch_accounts"
            app:title="Switch accounts" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/topic_list"
        app:iconSpaceReserved="false">

        <com.amebo.amebo.screens.settings.BottomSheetPreference
            android:defaultValue="0"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/default_topiclist"
            app:entries="@array/topicLists_anonymous"
            app:key="@string/key_topiclist_anonymous"
            app:valueType="integer" />

        <com.amebo.amebo.screens.settings.BottomSheetPreference
            android:defaultValue="0"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/default_topiclist"
            app:entries="@array/topicLists"
            app:key="@string/key_topiclist"
            app:valueType="integer" />

        <com.amebo.amebo.screens.settings.BottomSheetPreference
            android:defaultValue="0"
            android:icon="@drawable/ic_baseline_sort_24"
            android:title="@string/default_board_sort"
            app:entries="@array/board_sorts"
            app:key="@string/key_board_sort"
            app:valueType="integer" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_bookmark_24dp"
            android:key="@string/key_mark_topics_as_read"
            app:defaultValue="true"
            app:title="@string/mark_topics_as_read" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/appearance">

        <SwitchPreference
            android:icon="@drawable/ic_baseline_emoji_emotions_24"
            app:key="@string/key_use_device_emojis"
            app:title="@string/use_device_emojis" />

        <SwitchPreference
            android:icon="@drawable/ic_baseline_brightness_2_24"
            app:defaultValue="false"
            app:key="@string/key_dark_mode"
            app:title="@string/dark_mode" />

        <com.amebo.amebo.screens.settings.BottomSheetPreference
            android:defaultValue="0"
            android:icon="@drawable/ic_palette_24dp"
            android:title="@string/theme"
            app:entries="@array/themes"
            app:key="@string/key_current_theme"
            app:valueType="integer" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/history">

        <Preference
            android:icon="@drawable/ic_close_24dp"
            app:summary="@string/clear_search_history_explanation"
            android:key="@string/key_clear_search_history"
            android:title="@string/clear_search_history" />

        <Preference
            app:summary="@string/clear_read_topics_explanation"
            android:icon="@drawable/ic_cancel_black_24dp"
            android:key="@string/key_clear_read_topics"
            android:title="@string/clear_read_topics" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/misc">

        <SwitchPreference
            android:defaultValue="true"
            app:defaultValue="true"
            app:summary="@string/crash_report_explanation"
            app:icon="@drawable/ic_baseline_bug_report_24"
            app:key="@string/key_enable_crashlytics"
            app:title="@string/crash_report" />

        <SwitchPreference
            android:defaultValue="true"
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_exit_to_app_24"
            app:key="@string/key_confirm_exit"
            app:title="@string/confirm_exit" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">

        <Preference
            app:icon="@drawable/ic_info_24dp"
            app:key="@string/key_privacy"
            app:title="@string/privacy_policy" />

        <Preference
            app:icon="@drawable/ic_text_box_outline"
            app:key="@string/key_licences"
            app:title="@string/licences" />

        <Preference
            android:icon="@drawable/ic_baseline_star_24"
            app:key="@string/key_rate_app"
            app:title="@string/rate_app" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/app_version"
        app:iconSpaceReserved="false">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/key_app_version"
            app:title="@string/app_version" />
    </PreferenceCategory>
</PreferenceScreen>