<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:title="@string/search_nairaland" />

    <item
        android:id="@+id/go_to_profile"
        android:title="@string/go_to_profile" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/share"
        android:title="@string/share" />

    <item
        android:id="@+id/collapse_all"
        android:title="@string/collapse_all_posts" />
    <item
        android:id="@+id/expand_all"
        android:title="@string/expand_all_posts" />

    <item
        android:id="@+id/jump_to_page"
        android:title="@string/jump_to_page" />

    <item
        android:id="@+id/view_recent_topics"
        android:title="@string/view_recent_topics" />
    <item
        android:id="@+id/topic_info"
        android:title="@string/topic_information" />
</menu>