<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.rules.RulesScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:gravity="center"
        android:padding="@dimen/medium"
        android:text="@string/nairaland_rules"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp" />

    <include
        layout="@layout/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium"
            android:scrollbars="vertical"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorBackground"
        android:elevation="4dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/large">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
