<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.newpost.muslim.MuslimDeclarationScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_24dp"
            app:title="@string/are_you_a_muslim_question" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/large"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <TextView
            android:id="@+id/txtStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="I believe that there no god/God but Allah.
    I believe that Muhammad is God's Holy Prophet.
    I believe that Islam is the Only True Religion.
    lā ʾilāha ʾillā-llāh, muhammadun rasūlu-llāh." />

        <RadioGroup
            android:id="@+id/rbtnGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtnAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes_i_m_muslim_and_believe_of_all_the_above"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtnDecline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/no"
                android:textSize="16sp" />
        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/submit"
            tools:enabled="true" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>