<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/large"
    tools:context=".screens.user.search.GoToUserScreen">


    <TextView
        style="@style/TextStyle.Heading"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:text="@string/go_to_profile"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:hint="@string/username"
        app:counterMaxLength="15"
        app:startIconDrawable="@drawable/ic_person_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:imeOptions="actionNone"
            android:lines="1"
            android:layout_height="match_parent"
            android:maxLines="1">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large"
            android:text="@android:string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/go" />
    </LinearLayout>
</LinearLayout>